# MeaningfulTrie

./: Cargo.toml  README.md  default.nix  heart_sutra.txt  is_you_is.txt
.codesandbox/: tasks.json
benches/: suffix.rs
src/: .main.rs.swp  config.rs  lazy.rs  lib.rs  main.rs  trie.rs
src/display/: mod.rs  trie.rs
src/display/trie/: mod.rs  render.rs  ui_state.rs
src/display/trie/modes/: command.rs  file_explorer.rs  mod.rs  trie_navigation.rs
src/display/window/: mod.rs
src/tree/: mod.rs
