[package]
name = "trie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ncurses = "5.101.0"
rand = "0.8"

[dev-dependencies]

criterion = "0.3"
rand = "0.8"


[features]

default = ["ncurses/panel"]

[[bench]]
name = "suffix"
harness = false

[profie.dev]
build=true


